crates/ruff_linter/src/rules/flake8_2020/snapshots/ruff_linter__rules__flake8_2020__tests__YTT101_YTT101.py.snap
---
source: crates/ruff_linter/src/rules/flake8_2020/mod.rs
---
YTT101 `sys.version[:3]` referenced (python3.10), use `sys.version_info`
 --> YTT101.py:6:7
  |
6 | print(sys.version[:3])
  |       ^^^^^^^^^^^
  |

YTT101 `sys.version[:3]` referenced (python3.10), use `sys.version_info`
 --> YTT101.py:7:7
  |
7 | print(version[:3])
  |       ^^^^^^^
  |

YTT101 `sys.version[:3]` referenced (python3.10), use `sys.version_info`
 --> YTT101.py:8:7
  |
8 | print(v[:3])
  |       ^
  |
