crates/ruff_linter/src/rules/flake8_2020/snapshots/ruff_linter__rules__flake8_2020__tests__YTT102_YTT102.py.snap
---
source: crates/ruff_linter/src/rules/flake8_2020/mod.rs
---
YTT102 `sys.version[2]` referenced (python3.10), use `sys.version_info`
 --> YTT102.py:4:12
  |
4 | py_minor = sys.version[2]
  |            ^^^^^^^^^^^
  |

YTT102 `sys.version[2]` referenced (python3.10), use `sys.version_info`
 --> YTT102.py:5:12
  |
5 | py_minor = version[2]
  |            ^^^^^^^
  |
