crates/ruff_linter/src/rules/flake8_2020/snapshots/ruff_linter__rules__flake8_2020__tests__YTT202_YTT202.py.snap
---
source: crates/ruff_linter/src/rules/flake8_2020/mod.rs
---
YTT202 `six.PY3` referenced (python4), use `not six.PY2`
 --> YTT202.py:4:4
  |
4 | if six.PY3:
  |    ^^^^^^^
  |

YTT202 `six.PY3` referenced (python4), use `not six.PY2`
 --> YTT202.py:6:4
  |
6 | if PY3:
  |    ^^^
  |
