crates/ruff_linter/src/rules/flake8_2020/snapshots/ruff_linter__rules__flake8_2020__tests__YTT203_YTT203.py.snap
---
source: crates/ruff_linter/src/rules/flake8_2020/mod.rs
---
YTT203 `sys.version_info[1]` compared to integer (python4), compare `sys.version_info` to tuple
 --> YTT203.py:4:1
  |
2 | from sys import version_info
3 |
4 | sys.version_info[1] >= 5
  | ^^^^^^^^^^^^^^^^^^^
5 | version_info[1] < 6
  |

YTT203 `sys.version_info[1]` compared to integer (python4), compare `sys.version_info` to tuple
 --> YTT203.py:5:1
  |
4 | sys.version_info[1] >= 5
5 | version_info[1] < 6
  | ^^^^^^^^^^^^^^^
