crates/ruff_linter/src/rules/flake8_2020/snapshots/ruff_linter__rules__flake8_2020__tests__YTT204_YTT204.py.snap
---
source: crates/ruff_linter/src/rules/flake8_2020/mod.rs
---
YTT204 `sys.version_info.minor` compared to integer (python4), compare `sys.version_info` to tuple
 --> YTT204.py:4:1
  |
4 | sys.version_info.minor <= 7
  | ^^^^^^^^^^^^^^^^^^^^^^
  |

YTT204 `sys.version_info.minor` compared to integer (python4), compare `sys.version_info` to tuple
 --> YTT204.py:5:1
  |
5 | version_info.minor > 8
  | ^^^^^^^^^^^^^^^^^^
  |
