crates/ruff_linter/src/rules/flake8_2020/snapshots/ruff_linter__rules__flake8_2020__tests__YTT301_YTT301.py.snap
---
source: crates/ruff_linter/src/rules/flake8_2020/mod.rs
---
YTT301 `sys.version[0]` referenced (python10), use `sys.version_info`
 --> YTT301.py:4:12
  |
4 | py_major = sys.version[0]
  |            ^^^^^^^^^^^
  |

YTT301 `sys.version[0]` referenced (python10), use `sys.version_info`
 --> YTT301.py:5:12
  |
5 | py_major = version[0]
  |            ^^^^^^^
  |
