crates/ruff_linter/src/rules/flake8_2020/snapshots/ruff_linter__rules__flake8_2020__tests__YTT302_YTT302.py.snap
---
source: crates/ruff_linter/src/rules/flake8_2020/mod.rs
---
YTT302 `sys.version` compared to string (python10), use `sys.version_info`
 --> YTT302.py:4:1
  |
2 | from sys import version
3 |
4 | version < "3"
  | ^^^^^^^
5 | sys.version < "3"
6 | sys.version <= "3"
  |

YTT302 `sys.version` compared to string (python10), use `sys.version_info`
 --> YTT302.py:5:1
  |
4 | version < "3"
5 | sys.version < "3"
  | ^^^^^^^^^^^
6 | sys.version <= "3"
7 | sys.version > "3"
  |

YTT302 `sys.version` compared to string (python10), use `sys.version_info`
 --> YTT302.py:6:1
  |
4 | version < "3"
5 | sys.version < "3"
6 | sys.version <= "3"
  | ^^^^^^^^^^^
7 | sys.version > "3"
8 | sys.version >= "3"
  |

YTT302 `sys.version` compared to string (python10), use `sys.version_info`
 --> YTT302.py:7:1
  |
5 | sys.version < "3"
6 | sys.version <= "3"
7 | sys.version > "3"
  | ^^^^^^^^^^^
8 | sys.version >= "3"
  |

YTT302 `sys.version` compared to string (python10), use `sys.version_info`
 --> YTT302.py:8:1
  |
6 | sys.version <= "3"
7 | sys.version > "3"
8 | sys.version >= "3"
  | ^^^^^^^^^^^
