crates/ruff_linter/src/rules/flake8_2020/snapshots/ruff_linter__rules__flake8_2020__tests__YTT303_YTT303.py.snap
---
source: crates/ruff_linter/src/rules/flake8_2020/mod.rs
---
YTT303 `sys.version[:1]` referenced (python10), use `sys.version_info`
 --> YTT303.py:4:7
  |
4 | print(sys.version[:1])
  |       ^^^^^^^^^^^
  |

YTT303 `sys.version[:1]` referenced (python10), use `sys.version_info`
 --> YTT303.py:5:7
  |
5 | print(version[:1])
  |       ^^^^^^^
  |
