crates/ruff_linter/src/rules/flake8_2020/snapshots/ruff_linter__rules__flake8_2020__tests__sys-version-cmp-str3_YTT103.py.snap
---
source: crates/ruff_linter/src/rules/flake8_2020/mod.rs
---
YTT103 `sys.version` compared to string (python3.10), use `sys.version_info`
 --> YTT103.py:4:1
  |
2 | from sys import version
3 |
4 | version < "3.5"
  | ^^^^^^^
5 | sys.version < "3.5"
6 | sys.version <= "3.5"
  |

YTT103 `sys.version` compared to string (python3.10), use `sys.version_info`
 --> YTT103.py:5:1
  |
4 | version < "3.5"
5 | sys.version < "3.5"
  | ^^^^^^^^^^^
6 | sys.version <= "3.5"
7 | sys.version > "3.5"
  |

YTT103 `sys.version` compared to string (python3.10), use `sys.version_info`
 --> YTT103.py:6:1
  |
4 | version < "3.5"
5 | sys.version < "3.5"
6 | sys.version <= "3.5"
  | ^^^^^^^^^^^
7 | sys.version > "3.5"
8 | sys.version >= "3.5"
  |

YTT103 `sys.version` compared to string (python3.10), use `sys.version_info`
 --> YTT103.py:7:1
  |
5 | sys.version < "3.5"
6 | sys.version <= "3.5"
7 | sys.version > "3.5"
  | ^^^^^^^^^^^
8 | sys.version >= "3.5"
  |

YTT103 `sys.version` compared to string (python3.10), use `sys.version_info`
 --> YTT103.py:8:1
  |
6 | sys.version <= "3.5"
7 | sys.version > "3.5"
8 | sys.version >= "3.5"
  | ^^^^^^^^^^^
